# T3000_Building_Automation_System

./: AGENTBRIDGE_OPTIMIZATION.md  CI部署指南.md  Linux编译方案.md  T3000_zh.iss  build_installer.bat  build_zh.bat  test_api.py  编译指南.md
.github/workflows/: agentbridge-cross-compile.yml  build.yml  test-compile.yml
AgentBridge/: API_DOCUMENTATION.md  ARCHITECTURE.md  README.md
AgentBridgeStandalone/: AgentBridgeStandalone.cpp  AgentBridgeStandalone.h  AgentBridgeTest.cpp  CMakeLists.txt
FlexSlideBar/: FlexSlideBar_zh.rc
ISP/: ISP_zh.rc
Modbus Poll/: Modbus Poll_zh.rc
ModbusDllforVc/ModbusDllforVc/: ModbusDllforVc_zh.rc
T3000/: AgentBridge.cpp  AgentBridge.h  AgentBridgeDlg.h  AgentHttpServer.cpp  AgentHttpServer.h  AgentMcpServer.cpp  AgentMcpServer.h  AgentWebSocket.cpp  AgentWebSocket.h  BacnetInput.cpp  BacnetOutput.cpp  BacnetProgramDebug.cpp  BacnetRange.cpp  BacnetView.cpp  LanguageLocale.cpp  LanguageLocale.h  LanguageLocale_zh.ini  MainFrm.cpp  T3000.cpp  T3000_VS2019.vcxproj  T3000_zh.rc  global_function.cpp  global_variable.h  global_variable_extern.h
T3000/ResourceFile/webview/www/: index.html
T3000/ResourceFile/webview/www/assets/: AlarmsPage.f013f8e1.js  AntdIcon.a7e3fd8d.js  App.fd89958b.js  AppCard.9ef13f29.js  AppLibrary.d15eb988.js  ApplicationSettingsPanel.5ca7dbb6.js  AppsLibLayout.d2a70d90.js  ArrayPage.f5909fb4.js  BuildingsPage.d23b7746.js  Card.d396a800.js  CheckOutlined.5425ac88.js  ClosePopup.b24f3c05.js  CreateApp.24570346.js  CustomUnitsPage.0bd51946.js  Dashboard.b466db94.js  DashboardPage.04b37dc2.js  DataGridHeaderCell.296ca89e.js  DatabaseManagementPage.812ca36c.js  DatabasePartitionsPanel.09c4a6bb.js  DatabaseViewerPage.ae2da843.js  DevelopLayout.2ba951e9.js  DevelopLayoutWrapper.e9e9b108.js  DiagnosticPage.4323a89d.js  DiscoverPage.66eef0f2.js  DocumentationPage.8909c481.js  EditApp.a900f0ef.js  EditOutlined.402889c3.js  ErrorNotFound.e1d50d3c.js  EyeOutlined.f7ace615.js  FileBrowserPage.3c788d7a.js  FileUploadS3.fe9e814c.js  (+95 more)
T3000ProgramEditorTest/: T3000ProgramEditorTest_zh.rc
Update/: Update_zh.rc
